@@ -170,5 +170,9 @@ ZBX_THREAD_ENTRY(proxyconfig_thread, args)
 				CONFIG_PROXYCONFIG_FREQUENCY);
 
 		zbx_sleep_loop(CONFIG_PROXYCONFIG_FREQUENCY);
+
+#if !defined(_WINDOWS) && defined(HAVE_RESOLV_H)
+		zbx_update_resolver_conf();	/* handle /etc/resolv.conf update */
+#endif
 	}
 }
