@@ -98,5 +98,9 @@ ZBX_THREAD_ENTRY(dbconfig_thread, args)
 				get_process_type_string(process_type), sec, CONFIG_CONFSYNCER_FREQUENCY);
 
 		zbx_sleep_loop(CONFIG_CONFSYNCER_FREQUENCY);
+
+#if !defined(_WINDOWS) && defined(HAVE_RESOLV_H)
+		zbx_update_resolver_conf();	/* handle /etc/resolv.conf update */
+#endif
 	}
 }
