@@ -4406,6 +4406,10 @@ ZBX_THREAD_ENTRY(vmware_thread, args)
 		}
 
 		zbx_sleep_loop(sleeptime);
+
+#if !defined(_WINDOWS) && defined(HAVE_RESOLV_H)
+		zbx_update_resolver_conf();	/* handle /etc/resolv.conf update */
+#endif
 	}
 #undef STAT_INTERVAL
 #else
