@@ -264,5 +264,9 @@ ZBX_THREAD_ENTRY(watchdog_thread, args)
 		}
 
 		zbx_sleep_loop(DB_PING_FREQUENCY);
+
+#if !defined(_WINDOWS) && defined(HAVE_RESOLV_H)
+		zbx_update_resolver_conf();	/* handle /etc/resolv.conf update */
+#endif
 	}
 }
